<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gruv_white"
    android:paddingHorizontal="25dp"
    android:scrollbarStyle="outsideOverlay"
    android:scrollbarThumbVertical="@color/gruv_green">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="60dp">

        <TextView
            android:id="@+id/heading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/hello_world"
            android:textAlignment="center"
            android:textColor="@color/gruv_yellow"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="name"
            android:background="@color/white"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:textColor="@color/gruv_gray"
            android:textColorHint="@color/gruv_gray"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading_text"
            app:layout_constraintWidth_percent="0.9" />

        <LinearLayout
            android:id="@+id/button_container"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:weightSum="3"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gruv_red"
                android:text="@string/cancel"
                android:textColor="@color/gruv_white" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gruv_green"
                android:text="@string/submit"
                android:textColor="@color/gruv_white" />

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/activity_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gruv_yellow"
                android:text="@string/activity"
                android:textColor="@color/gruv_white" />
        </LinearLayout>

        <TextView
            android:id="@+id/sports_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Which Sports do you like?"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textColor="@color/gruv_black"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_container" />


        <CheckBox
            android:id="@+id/checkbox_football"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/gruv_black"
            android:text="football"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_marginStart="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/checkbox_basketball"
            app:layout_constraintTop_toBottomOf="@+id/sports_label" />

        <CheckBox
            android:id="@+id/checkbox_basketball"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/gruv_black"
            android:text="basketball"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/checkbox_football"
            app:layout_constraintTop_toBottomOf="@+id/sports_label"
            app:layout_constraintRight_toRightOf="parent" />

        <CheckBox
            android:id="@+id/checkbox_cricket"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/gruv_black"
            android:text="cricket"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_marginStart="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/checkbox_judo"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_football" />

        <CheckBox
            android:id="@+id/checkbox_judo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/gruv_black"
            android:text="judo"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/checkbox_cricket"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_basketball" />

        <TextView
            android:id="@+id/radioText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:textColor="@color/gruv_black"
            android:text="Choose Your Gender !!! "
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/checkbox_judo" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/radioText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gruv_black"
                android:text="Male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:textColor="@color/gruv_black"
                android:layout_height="wrap_content"
                android:text="Female" />

            <RadioButton
                android:id="@+id/radioOther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gruv_black"
                android:text="Other" />

        </RadioGroup>

        <TextView
            android:id="@+id/country_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:text="Choose a country"
            android:textColor="@color/gruv_black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />

        <Spinner
            android:id="@+id/country_spinner"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/gruv_green"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/country_label"
            app:layout_constraintWidth_percent="0.5"
            android:hapticFeedbackEnabled="true"
            android:entries="@array/country_list"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gruv_aqua"
            android:text="Menu"
            app:layout_constraintBottom_toTopOf="@id/heading_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/gruv_white" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:contentDescription="cat image"
            android:scaleType="centerInside"
            android:src="@drawable/dice"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/country_spinner" />

        <Button
            android:id="@+id/db_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/gruv_aqua"
            android:text="Database"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/gruv_white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>